[FIX] pos_loyalty: loyalty reward product quantity and loyalty points
Before this commit:

- An issue existed with the quantity of reward products where there were more
  reward products applied than configured in the backend.
- Rewards were being applied even when loyalty points were insufficient for the
  redemption of loyalty rewards.
- In a loyalty program configuration with a reward point mode per order, loyalty
  points were consistently decreasing.
- We were not showing a balance of loyalty points for the customers.

After this commit:

- The quantity of the applied reward product will now match the configuration
  set in the backend.
- Reward products will not be applied if the customer's loyalty points are
  insufficient for the specific reward product.
- Loyalty points will be computed correctly in the case of the reward point mode
  per order.
- We will show a balance of loyalty points for the customers.

task-4126886

--- a/addons/pos_loyalty/static/src/css/Loyalty.scss
+++ b/addons/pos_loyalty/static/src/css/Loyalty.scss
@@ -98,9 +98,12 @@
             font-size: small;
         }
 
+        .loyalty-points-balance {
+            color: #714B67;
+        }
+
         .loyalty-points-spent {
             color: #C86E6E;
-            background: rgba(200, 110, 110, 0.17);
         }
 
         .loyalty-points-total {
